# AutomatiX

./: .audit-salvage.json  .dockerignore  .env.example  .env.tauri  .gitignore  ARHIVA-README.txt  BUILDER_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  Caddyfile  DENSITY_AUDIT.md  DEPLOY.md  Dockerfile  IMPROVEMENTS-AUDIT.md  MIGRATION-RUNBOOK.md  README.md  Restart-Server.cmd  SECURITY.md  SHARED_STORAGE_DEPLOY.md  Start-Automatix.cmd  Stop-Automatix.cmd  UI-UX-ANALYSIS.md  build-output.txt  chunk-preview.txt  components.json  deploy-shared-storage.sh  docker-compose.yml  ds-css-build.css  ds-entry.ts  ds-fonts.css  electron-builder.json  eslint.config.js  fiori-preview.html  index.d.ts  index.html  kitchensink.html  landing.html  manager.html  package-lock.json  package.json  (+8 more)
.design-sync/: config.json
.ds-sync/: package-lock.json
ai-service/: Cargo.toml  config.toml.example
ai-service/.cargo/: config.toml
ai-service/src/: agent.rs  config.rs  llm.rs  main.rs
ai-service/src/tools/: api.rs  database.rs  files.rs  mod.rs  workflow.rs
css/: styles.css
deploy/: REMOTE_ACCESS.md  package.bat  publish-electron-update.bat  publish-update.bat  setup-server.bat
docker/: healthcheck.sh  nginx.conf
docs/: ADD_DATA_GUIDE.md  ENTERPRISE-UI-MIGRATION-PLAN.md  MODIFICATION_DICTIONARY.md  PAGE_IMPROVEMENTS.md  PROMIX_STYLE_CHECKLIST.md  REDESIGN_PLAN.md  RESUME-2026-06-16.md  UI_ULTRA_PREMIUM_PROMPT.md  app-inventory-2026-06-16.md  debug-log-2026-06-16.md  design-system.md  enterprise-overhaul-audit-2026-06-16.md  fiori-handoff-2026-06-16.md  frontend-audit-2026-06-14.md  improvements-audit-2026-06-11.md  inventar-pagini-si-functii-2026-06-16.md  ipc-audit-2026-06-10.md  perf-baseline.md  user-requests-audit-0-24.md  user-requests-session-2026-06-25.md
electron/: main.ts  preload.ts
js/: main.js  menu-data.js
migrations/: 001_initial_schema.sql  002_projects_schema.sql  003_production_schema.sql  004_documents_schema.sql  005_workers_time_tracking.sql  006_materials_stock_usage.sql  007_finance_costing.sql  008_alerts.sql  009_projects_phase5.sql  010_installed_stations_schema.sql  011_demo_seed_reset.sql  012_worker_certifications.sql  013_user_experience_and_moderation.sql  014_finance_compliance_tasks.sql  016_project_pieces.sql  017_production_piece_tracking.sql  018_promix_inspired_procurement.sql  019_project_stages_notebook_workflow.sql  020_station_flow_inventory.sql  021_production_documents.sql  022_dba_indexes.sql  023_real_promix_projects.sql  024_dba_fix_indexes_status_columns.sql  025_parts_tree_file_metadata.sql  026_remove_workers_hr.sql  027_finance_upgrade.sql  028_dynamic_contract_engineering.sql  029_deplasari.sql  030_sales_leads.sql  031_restructure_roles.sql  032_user_custom_pages.sql  033_chat.sql  034_email.sql  035_chat_upgrade.sql  036_ai_memory.sql  037_material_location.sql  (+96 more)
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.tauri/: .gitignore
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/src/: lib.rs  main.rs
(+1187 files in other folders)
