[package]
name = "ai-service"
version = "1.1.7"
edition = "2021"
description = "Standalone AI service for PROMIX Automatix"
authors = ["Promix Automatix"]
license = "MIT"

[[bin]]
name = "ai-service"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
llama-cpp-2 = { version = "0.1", optional = true }
encoding_rs = { version = "0.8", optional = true }
reqwest = { version = "0.12", features = ["json"] }
tower-http = { version = "0.5", features = ["cors", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "any"] }
pdf-extract = "0.7"
calamine = "0.24"
csv = "1"

[features]
default = []
llm = ["llama-cpp-2", "encoding_rs"]
vulkan = ["llm", "llama-cpp-2/vulkan"]
cuda = ["llm", "llama-cpp-2/cuda"]
